2011-03-06  Matevz Tadel  <matevz.tadel@ijs.si>

	Use GSL for ODE integration. This adds dependency on gsl library.

	* Makefile:
	Link against libgsl.

	* Glasses/ODECrawler.cxx:
	* Glasses/ODECrawler.h:
	Remove old code, wrap around gsl_odeiv interface.
	This also required a change ODECrawlerMaster prototypes - raw
	double arrays are now passed in.

	* Glasses/Moonraker.cxx:
	* Glasses/Moonraker.h:
	Follow-up on changes in OdeCrawler.

2010-10-17  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/MultiSpheror.cxx:
	* Glasses/MultiSpheror.h:
	* Glasses/WarmAmoeba.cxx:
	* Glasses/WarmAmoeba.h:
	Add includes missing after GledCore cleanup.

2010-04-06  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/Moonraker.cxx:
	* Glasses/Moonraker.h:
	Replace usage of TVector3 with ZPoint.

2009-05-17  Matevz Tadel  <matevz.tadel@ijs.si>

	Mac compilation changes.

	* Glasses/ODECrawler.h:
	Explicit template instantiation causes trouble on mac.
	Need to see with Axel.

2009-04-26  Matevz Tadel  <matevz.tadel@ijs.si>

	* Rnr/GL/Moonraker_GL_Rnr.h:
	Do not include glu.h - done by glew.h.

2009-04-13  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/ODECrawler.h:
	Fix for changes in L{aA} p7 pragma.

	* glass.list:
	Fix for new render-class specification.

2009-02-26  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/ODECrawler.cxx:
	Fix compilation warnings.

2008-09-30  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/ODECrawler.cxx:
	* Glasses/ODECrawler.h:
	Add expert commands for screwing around with the integration buffer:
	  void      ChangeOrderInPlace(Int_t order);
	  Double_t* RawYArray();

	Removed obsolete members TVectorF *mX/YStored.

2008-09-24  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/ODECrawler.cxx:
	* Glasses/ODECrawler.h:
	Add private member 'Bool_t hCrawling' to protect against multiple
	execution of Crawl().
	In Crawl() use this member instead of read-lock as it was blocking
	GUI updates when called with high frequency.
